cmake_minimum_required(VERSION 3.21)
project(Esempi_Lezione)

set(CMAKE_CXX_STANDARD 14)

add_executable(Es_signal esercizi/signals.c)
add_executable(Es_signal_Sender esercizi/signal_sender.c)
add_executable(Es_Pipe esercizi/pipe.c)
add_executable(Es_Pipe_2 esercizi/pipe_2.c)
add_executable(Es_FIFO esercizi/fifo.c)
add_executable(Es_FIFO_SELECT esercizi/fifo_select.c)
add_executable(Es_clientHTTP esercizi/socket_client_http.c)
add_executable(Es_serverHTTP esercizi/socket_server_http.c)
add_executable(Es_socketSERV esercizi/socket_server.c)
add_executable(Es_socketSERV2 esercizi/socket_server_2.c)
add_executable(Es_socketUDPServ esercizi/socket_udp.c)
add_executable(Es_socketUDPClient esercizi/socket_udp_client.c)
add_executable(Fifo_Test1 ex_fifo_test_1.c)
add_executable(Fifo_Test2 ex_fifo_test_2.c)
add_executable(Fifo_Test3 ex_fifo_test_3.c)
add_executable(Fifo_Test4 ex_fifo_test_4.c)
add_executable(Signal_Test ex_signal_test.c)
add_executable(Pipe_Test1 ex_pipe_test_1.c)
add_executable(Pipe_Test2 ex_pipe_test_2.c)
add_executable(Pipe_Test3 ex_pipe_test_3.c)
add_executable(ShmV_Test1 ex_shmV_test_1.c)
add_executable(Sock_Cli ex_sock_cli.c)
add_executable(Sock_Serv_1 ex_sock_serv_1.c)
add_executable(Sock_Serv_2 ex_sock_serv_2.c)

